--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@ body {
     background-color: #f3f5fc;
 }
 .container {
+    margin: 0 auto;
     background-color: #f3f5fc;
     width: 1440px;
     display: flex;
@@ -99,7 +100,7 @@ button {
 
 footer {
     width: 1440px;
-    margin: 50px 0 80px 0;
+    margin: 50px auto;
     font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 24px;
