--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ body {
     background-color: #f3f5fc;
     margin-top: 168px;
     width: 680px;
-    height: 810px;
+    height: 610px;
     font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 48px;
@@ -62,7 +62,7 @@ textarea:focus {
     margin-top: 40px;
     padding: 40px;
     width: 400px;
-    height: 850px;
+    height: 650px;
     font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 24px;
@@ -85,6 +85,24 @@ button {
     color: #0A3871;
     border: 1px solid #0A3871;
     border-radius: 24px;
+    cursor: pointer;
+}
+
+.btn_criptografar:hover {
+    transform: rotateY(180deg);
+}
+
+.btn_descriptografar {
+    transform: rotateY(180deg);
+}
+
+.btnCopiar:hover {
+    background-color: #ffffff;
+    /* color: white; */
+}
+
+.btn_descriptografar:hover {
+    transform: rotateY(0deg);
 }
 
 .botoes-cripto{
